<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.dashboard.DashboardFragment">

    <LinearLayout
        android:id="@+id/llMainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="2dp"
            android:background="@drawable/btn_rounded_white_disabled"
            android:text="@string/lbl_dashboard"
            android:enabled="true"/>

        <View
            android:layout_width="@dimen/spacing_middle"
            android:layout_height="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="2dp"
            android:background="@drawable/btn_rounded_white"
            android:gravity="center"
            android:text="@string/lbl_information" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner_top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llMainMenu"
        app:layout_constraintVertical_weight="6">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_mxlarge"
            android:layout_marginEnd="@dimen/spacing_mxlarge"
            app:flexDirection="column"
            app:flexWrap="nowrap"
            app:justifyContent="space_between">

            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@color/grey_60"
                app:layout_alignSelf="center"
                app:layout_maxWidth="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="Sering di telusuri"
                android:textColor="@android:color/black" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:layout_marginBottom="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/spacing_mlarge">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_title_sensor"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/spacing_mxlarge"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_sensor"
                        android:layout_width="250dp"
                        android:layout_height="270dp"
                        android:layout_marginTop="@dimen/spacing_mlarge"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:src="@drawable/iot_image"/>

                    <TextView
                        android:id="@+id/tv_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_mxlarge"
                        android:text="@string/lbl_product_offering"
                        android:textAlignment="center"
                        android:textSize="@dimen/spacing_mlarge" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_request_sesor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_rounded_green"
                        android:paddingStart="@dimen/spacing_mxlarge"
                        android:paddingEnd="@dimen/spacing_mxlarge"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/spacing_xlarge"
                        android:text="@string/lbl_request"
                        android:textColor="@android:color/white"/>

                </LinearLayout>
            </ScrollView>

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>