<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".view.plant.DetailPlantFragment"
    android:orientation="vertical"
    android:weightSum="3">

    <include
        android:id="@+id/appBar"
        layout="@layout/custom_appbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_corner_top"
        android:layout_weight="2.7">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xmlarge"
                android:indeterminate="true"
                android:visibility="visible"
                android:layout_alignParentTop="true"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingTop="0dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="100dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_main"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="main image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_dummy" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/lbl_dummy_fertilizer"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_main"
                    app:layout_constraintStart_toEndOf="@+id/iv_main"
                    app:layout_constraintTop_toTopOf="@+id/iv_main" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/lbl_general_title"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/iv_main"
                    app:layout_constraintTop_toBottomOf="@+id/iv_main" />

                <TextView
                    android:id="@+id/tv_general_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_lorem"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/lbl_dummy_instruction_usage"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_general_desc"
                    app:layout_constraintTop_toBottomOf="@+id/tv_general_desc" />

                <TextView
                    android:id="@+id/tv_how_to_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_lorem"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_how_to_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/tv_how_to_info"
                    app:layout_constraintTop_toBottomOf="@+id/tv_how_to_info" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/lbl_dosis"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/rv_how_to_videos"
                    app:layout_constraintTop_toBottomOf="@+id/rv_how_to_videos" />

                <TextView
                    android:id="@+id/tv_dosis_recommendation_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    android:text="@string/tv_lorem"
                    app:layout_constraintStart_toStartOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>